--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
+    "@types/react-audio-player": "^0.13.0",
     "@types/react-dom": "^18.0.8",
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
